--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: di_visualizer_annotation
 description: di_visualizer_annotation
 version: 0.0.1
-# publish_to: none
+homepage: https://github.com/jWinterDay/di_visualizer_annotation
 
 environment:
   sdk: ">=2.17.0 <3.0.0"
